# GridGlider

./: README.md  requirements.txt
cluster_interfaces/: CMakeLists.txt  package.xml
cluster_interfaces/msg/: AstarPath.msg  ClusterInfo.msg
exploration/: CMakeLists.txt  package.xml  setup.py
exploration/config/: params.yaml
exploration/exploration/: astar_node.py  computation_node.py  draw_node.py  explore_node.py
exploration/exploration.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
exploration/exploration/classes/: marker_class.py  sensor_class.py  structs.py
exploration/exploration/frontier/: frontier.py
exploration/exploration/fuzzy/: fuzzy_utils.py
exploration/exploration/navigation/: control_tb3.py  path_planning.py
exploration/exploration/utility/: helper_functions.py
exploration/msg/: ClusterArray.msg  ClusterInfo.msg
maze_slam/: CMakeLists.txt  package.xml
maze_slam/config/: mapper_params_online_sync.yaml  rviz2_config.rviz
maze_slam/launch/: debugging_maze_online_sync_launch.py  maze_online_async_launch.py
maze_slam/map/: astar_exploration_result.pgm  astar_exploration_result.yaml  maze_map.pgm  maze_map.yaml  original_map.pgm  original_map.yaml  original_map_blocked_exits_generated_autonomously.pgm  original_map_blocked_exits_generated_autonomously.yaml
maze_slam/worlds/: debugging_maze.world  debugging_maze_thin_walls.world  maze_1m_path_3_exits.world
